Authorization infrastructure
* Ability to CRUD users with roles
* Ability to CRUD authorization policies in a namespace
* Ability to determine whether an operation is granted access

Authorization is still not checked/enforced on access path - will be done in a
separate commit.
